--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -58,7 +58,7 @@ body:
       label: Prerequisites 
       description: Make sure you have done all of the following:
       options:
-        - label: I have searched the [issues](https://github.com/{{ cookiecutter.username }}/{{ cookiecutter.pypi_name }}/issues) and believe that it has not already been reported
+        - label: "I have searched the [issues](https://github.com/{{ cookiecutter.username }}/{{ cookiecutter.pypi_name }}/issues) and believe that it has not already been reported"
           required: true
         - label: I have made sure this bug reproduces on the latest version
           required: true
