--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -56,9 +56,9 @@ body:
     id: generic-bug-report-checklist
     attributes:
       label: Prerequisites 
-      description: Make sure you have done all of the following:
+      description: "Make sure you have done all of the following:"
       options:
-        - label: "I have searched the [issues](https://github.com/{{ cookiecutter.username }}/{{ cookiecutter.pypi_name }}/issues) and believe that it has not already been reported"
+        - label: I have searched the [issues](https://github.com/{{ cookiecutter.username }}/{{ cookiecutter.pypi_name }}/issues) and believe that it has not already been reported
           required: true
         - label: I have made sure this bug reproduces on the latest version
           required: true
