--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 on:
-  - push
-  - pull_request
+  - push:
+  - pull_request:
   - schedule:
     - cron: "0 0 1 * *"  # Run every month
   # This way, we can make sure code doesn't break via external dependancies
