--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,10 @@
 on:
-  - push:
-  - pull_request:
-  - schedule:
+  schedule:
     - cron: "0 0 1 * *"  # Run every month
   # This way, we can make sure code doesn't break via external dependancies
+  push:
+  pull_request:
+
 jobs:
   test:
     runs-on: ubuntu-latest
